@@ -7,6 +7,8 @@ Version 1.3
 -----------
 (in development)
 
+- Gherkin lexer: Fixed single apostrophe bug and added new i18n keywords.
+
 - Lexers added:
 
   * Coldfusion
